# weather

./: .gitignore  LICENSE  PLC_MQTT_Connectivity_Runbook.md  README.md  ROADMAP.md  check_rain.py  config.yaml  install.sh  pyproject.toml  requirements.txt  setup_wizard.py  test_weather_mqtt.py  weather-mqtt.service  weather-webui.service  weather_mqtt.py  webui.py
.github/workflows/: tests.yml
cloud-status/: README.md  index.html  ingest.php  secret.sample.php
cloud-status/assets/: app.js  style.css
demo/: README.md  activity.html  history.html  index.html  inputs.html  mqtt.html  rules.html  settings.html  system.html
demo/assets/: app.js  style.css
